--- a/test/robot_model_config.yml
+++ b/test/robot_model_config.yml
@@ -1,38 +1,32 @@
 robot_model_config:
    file: /home/dennis/catkin_ws/src/wbc_ros/test/kuka_iiwa.urdf
-   joint_names: ["floating_base_trans_x", 
-                 "floating_base_trans_y", 
-                 "floating_base_trans_z", 
-                 "floating_base_rot_x", 
-                 "floating_base_rot_y", 
-                 "floating_base_rot_z", 
-                 "kuka_lbr_l_joint_2", 
-                 "kuka_lbr_l_joint_3", 
-                 "kuka_lbr_l_joint_4", 
-                 "kuka_lbr_l_joint_5", 
+   joint_names: ["kuka_lbr_l_joint_1",
+                 "kuka_lbr_l_joint_2",
+                 "kuka_lbr_l_joint_3",
+                 "kuka_lbr_l_joint_4",
+                 "kuka_lbr_l_joint_5",
                  "kuka_lbr_l_joint_6",
                  "kuka_lbr_l_joint_7"]
-   actuated_joint_names: ["kuka_lbr_l_joint_2", 
-                          "kuka_lbr_l_joint_3", 
-                          "kuka_lbr_l_joint_4", 
-                          "kuka_lbr_l_joint_5", 
-                          "kuka_lbr_l_joint_6", 
+   actuated_joint_names: ["kuka_lbr_l_joint_1",
+                          "kuka_lbr_l_joint_2",
+                          "kuka_lbr_l_joint_3",
+                          "kuka_lbr_l_joint_4",
+                          "kuka_lbr_l_joint_5",
+                          "kuka_lbr_l_joint_6",
                           "kuka_lbr_l_joint_7"]
-   floating_base: true
-   floating_base_state: 
-       pose: 
+   floating_base: false
+   floating_base_state:
+       pose:
            position: {data: [0.0,0.0,0.0]}
            orientation: {re: 1.0, im: [0.0,0.0,0.0]}
-       twist: 
+       twist:
           linear: {data: [0.0,0.0,0.0]}
           angular: {data: [0.0,0.0,0.0]}
-       acceleration: 
+       acceleration:
           linear: {data: [0.0,0.0,0.0]}
           angular: {data: [0.0,0.0,0.0]}
    world_frame_id: world
-   contact_points: 
+   contact_points:
        names: ["kuka_lbr_l_tcp"]
        elements: [1]
    type: kdl
-   joint_blacklist: ["kuka_lbr_l_joint_1"]
-   
