--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ link_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(wbc_node nodes/wbc_node.cpp nodes/conversions.cpp)
 add_executable(loop_back_driver_node nodes/loop_back_driver_node.cpp)
+add_executable(cartesian_position_controller_node nodes/controllers/cartesian_position_controller_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -162,6 +163,10 @@ target_link_libraries(wbc_node dl
 )
 target_link_libraries(loop_back_driver_node
    ${roscpp_LIBRARIES}
+)
+target_link_libraries(cartesian_position_controller_node
+   ${roscpp_LIBRARIES}
+   ${wbc-controllers_LIBRARIES}
 )
 
 #############
