--- a/test/config/joints.yml
+++ b/test/config/joints.yml
@@ -1,3 +1,4 @@
+noise_std_dev: 1e-4
 initial_joint_state:
     name: ["kuka_lbr_r_joint_1","kuka_lbr_r_joint_2","kuka_lbr_r_joint_3","kuka_lbr_r_joint_4","kuka_lbr_r_joint_5","kuka_lbr_r_joint_6","kuka_lbr_r_joint_7",
            "kuka_lbr_l_joint_1","kuka_lbr_l_joint_2","kuka_lbr_l_joint_3","kuka_lbr_l_joint_4","kuka_lbr_l_joint_5","kuka_lbr_l_joint_6","kuka_lbr_l_joint_7"]
