Added potential fields, joint limit avoidance and force controller

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_message_files(
    RigidBodyState.msg
    TaskConfig.msg
    TaskStatus.msg
+   RadialPotentialField.msg
+   RadialPotentialFieldVector.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -97,6 +99,9 @@ add_executable(wbc_node nodes/wbc_node.cpp nodes/conversions.cpp)
 add_executable(loop_back_driver_node nodes/loop_back_driver_node.cpp)
 add_executable(cartesian_position_controller_node nodes/controllers/cartesian_position_controller_node.cpp nodes/conversions.cpp)
 add_executable(joint_position_controller_node nodes/controllers/joint_position_controller_node.cpp nodes/conversions.cpp)
+add_executable(cartesian_force_controller_node nodes/controllers/cartesian_force_controller_node.cpp nodes/conversions.cpp)
+add_executable(cartesian_radial_potential_fields_node nodes/controllers/cartesian_radial_potential_fields_node.cpp nodes/conversions.cpp)
+add_executable(joint_limit_avoidance_node nodes/controllers/joint_limit_avoidance_node.cpp nodes/conversions.cpp)
 
 target_link_libraries(wbc_node dl
    ${catkin_LIBRARIES}
@@ -117,6 +122,18 @@ target_link_libraries(cartesian_position_controller_node
 target_link_libraries(joint_position_controller_node
    ${roscpp_LIBRARIES}
    ${wbc-controllers_LIBRARIES}
+)
+target_link_libraries(cartesian_force_controller_node
+    ${roscpp_LIBRARIES}
+    ${wbc-controllers_LIBRARIES}
+)
+target_link_libraries(cartesian_radial_potential_fields_node
+    ${roscpp_LIBRARIES}
+    ${wbc-controllers_LIBRARIES}
+)
+target_link_libraries(joint_limit_avoidance_node
+    ${roscpp_LIBRARIES}
+    ${wbc-controllers_LIBRARIES}
 )
 
 
