--- a/package.xml
+++ b/package.xml
@@ -31,9 +31,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>wbc_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>std_msgs</depend>
   <depend>trajectory_msgs</depend>
+  <depend>std_msgs</depend>
 
 </package>
