--- a/test/config/wbc.yml
+++ b/test/config/wbc.yml
@@ -1,8 +1,7 @@
 control_rate: 250
 robot_model_config:
     file: /home/dennis/catkin_ws/src/kuka_lbr_ros/kuka_lbr_description/urdf/kuka_lbr.urdf
-    submechanism_file: /home/dennis/catkin_ws/src/kuka_lbr_ros/kuka_lbr_description/hyrodyn/kuka_lbr.yml
-    type: hyrodyn
+    type: pinocchio
 wbc_config:
     - name: right_arm
       type: cart
@@ -20,5 +19,13 @@ wbc_config:
       weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0,
                 1.0,1.0,1.0,1.0,1.0,1.0,1.0]
       activation: 1.0
+    - name: joint_limits
+      type: jnt
+      priority: 0
+      joint_names: ['kuka_lbr_l_joint_1', 'kuka_lbr_l_joint_2', 'kuka_lbr_l_joint_3', 'kuka_lbr_l_joint_4', 'kuka_lbr_l_joint_5', 'kuka_lbr_l_joint_6', 'kuka_lbr_l_joint_7',
+                    'kuka_lbr_r_joint_1', 'kuka_lbr_r_joint_2', 'kuka_lbr_r_joint_3', 'kuka_lbr_r_joint_4', 'kuka_lbr_r_joint_5', 'kuka_lbr_r_joint_6', 'kuka_lbr_r_joint_7']
+      weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0,
+                1.0,1.0,1.0,1.0,1.0,1.0,1.0]
+      activation: 0.0
 qp_solver: qpoases
 integrate: true
