--- a/test/config/wbc.yml
+++ b/test/config/wbc.yml
@@ -3,22 +3,6 @@ robot_model_config:
     file: /home/dennis/catkin_ws/src/kuka_lbr_ros/kuka_lbr_description/urdf/kuka_lbr.urdf
     type: pinocchio
 wbc_config:
-    - name: collision_avoidance_right
-      type: cart
-      priority: 0
-      root: kuka_lbr_base
-      tip: kuka_lbr_r_tcp
-      ref_frame: kuka_lbr_base
-      weights: [1.0,1.0,1.0,0.0,0.0,0.0]
-      activation: 1.0
-    - name: contact_force_left
-      type: cart
-      priority: 0
-      root: kuka_lbr_base
-      tip: kuka_lbr_r_tcp
-      ref_frame: kuka_lbr_base
-      weights: [1.0,1.0,1.0,1.0,1.0,1.0]
-      activation: 1.0
     - name: right_arm
       type: cart
       priority: 0
@@ -27,6 +11,22 @@ wbc_config:
       ref_frame: kuka_lbr_base
       weights: [1.0,1.0,1.0,1.0,1.0,1.0]
       activation: 1.0
+    - name: collision_avoidance_left
+      type: cart
+      priority: 0
+      root: kuka_lbr_base
+      tip: kuka_lbr_l_tcp
+      ref_frame: kuka_lbr_base
+      weights: [1.0,1.0,1.0,0.0,0.0,0.0]
+      activation: 0.0
+    - name: contact_force_left
+      type: cart
+      priority: 0
+      root: kuka_lbr_base
+      tip: kuka_lbr_l_tcp
+      ref_frame: kuka_lbr_base
+      weights: [1.0,1.0,1.0,1.0,1.0,1.0]
+      activation: 0.0
     - name: joint_position
       type: jnt
       priority: 0
@@ -34,7 +34,7 @@ wbc_config:
                     'kuka_lbr_r_joint_1', 'kuka_lbr_r_joint_2', 'kuka_lbr_r_joint_3', 'kuka_lbr_r_joint_4', 'kuka_lbr_r_joint_5', 'kuka_lbr_r_joint_6', 'kuka_lbr_r_joint_7']
       weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0,
                 1.0,1.0,1.0,1.0,1.0,1.0,1.0]
-      activation: 1.0
+      activation: 0.0
     - name: joint_limits
       type: jnt
       priority: 0
