Add initial documentation, add unit tests, move code to src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,56 +20,9 @@ pkg_check_modules(wbc-robot_models-pinocchio REQUIRED wbc-robot_models-pinocchio
 pkg_check_modules(wbc-solvers-hls REQUIRED wbc-solvers-hls)
 pkg_check_modules(wbc-solvers-qpoases REQUIRED wbc-solvers-qpoases)
 
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#    FILES
-# )
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#    DEPENDENCIES
-#    geometry_msgs
-# )
-
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
-
-###################################
-## catkin specific configuration ##
-###################################
-
 catkin_package(
   CATKIN_DEPENDS geometry_msgs sensor_msgs std_msgs trajectory_msgs wbc_msgs
 )
-
-###########
-## Build ##
-###########
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
@@ -90,13 +43,13 @@ link_directories(
   ${wbc-solvers-qpoases_LIBRARIES}
 )
 
-add_executable(wbc_node nodes/wbc_node.cpp nodes/conversions.cpp nodes/controllers/controller_node.cpp)
-add_executable(loop_back_driver_node nodes/loop_back_driver_node.cpp)
-add_executable(cartesian_position_controller_node nodes/controllers/cartesian_position_controller_node.cpp nodes/controllers/controller_node.cpp nodes/conversions.cpp)
-add_executable(joint_position_controller_node nodes/controllers/joint_position_controller_node.cpp  nodes/controllers/controller_node.cpp nodes/conversions.cpp)
-add_executable(cartesian_force_controller_node nodes/controllers/cartesian_force_controller_node.cpp  nodes/controllers/controller_node.cpp nodes/conversions.cpp)
-add_executable(cartesian_radial_potential_fields_node nodes/controllers/cartesian_radial_potential_fields_node.cpp  nodes/controllers/controller_node.cpp nodes/conversions.cpp)
-add_executable(joint_limit_avoidance_node nodes/controllers/joint_limit_avoidance_node.cpp  nodes/controllers/controller_node.cpp nodes/conversions.cpp)
+add_executable(wbc_node src/wbc_node.cpp src/conversions.cpp src/controllers/controller_node.cpp)
+add_executable(loop_back_driver_node src/loop_back_driver_node.cpp)
+add_executable(cartesian_position_controller_node src/controllers/cartesian_position_controller_node.cpp src/controllers/controller_node.cpp src/conversions.cpp)
+add_executable(joint_position_controller_node src/controllers/joint_position_controller_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
+add_executable(cartesian_force_controller_node src/controllers/cartesian_force_controller_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
+add_executable(cartesian_radial_potential_fields_node src/controllers/cartesian_radial_potential_fields_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
+add_executable(joint_limit_avoidance_node src/controllers/joint_limit_avoidance_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
 
 target_link_libraries(wbc_node dl
    ${catkin_LIBRARIES}
@@ -140,11 +93,8 @@ install(TARGETS wbc_node
 ## Testing ##
 #############
 
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_test.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+if(CATKIN_ENABLE_TESTING)
+    find_package(rostest REQUIRED)
+    add_rostest_gtest(${PROJECT_NAME}-test test/test_wbc.test test/test_wbc.cpp)
+    target_link_libraries(${PROJECT_NAME}-test ${catkin_LIBRARIES} ${roscpp_LIBRARIES})
+endif()
