Moved info to package.xml

--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
   <maintainer email="dennis.mronga@dfki.de">Dennis Mronga</maintainer>
   <license>BSD-3</license>
   <url type="https://arc-opt.github.io/Documentation"></url>
+  <logo>https://github.com/ARC-OPT/wbc/doc/images/arcopt_logo_v3_github.jpg</logo>
   <author email="dennis.mronga@dfki.de">Dennis Mronga</author>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -16,4 +17,21 @@
   <depend>trajectory_msgs</depend>
   <depend>std_msgs</depend>
 
+  <tags>stable</tags>
+  <keywords>
+     <keyword>Control</keyword>
+     <keyword>Whole-Body Control</keyword>
+     <keyword>Optimization</keyword>
+     <keyword>Redundancy Resolution</keyword>
+   </keywords>
+
+  <stage>0</stage>
+  <use>single project</use>
+  <activity>active</activity>
+
+  <classifiers>
+    <classifier>c++</classifier>
+    <classifier>ROS</classifier>
+    <classifier>ubuntu</classifier>
+  </classifiers>
 </package>
