--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,9 @@ install(TARGETS wbc_node
 install(DIRECTORY config
         DESTINATION share/${PROJECT_NAME}/
 )
+install(DIRECTORY models
+        DESTINATION share/${PROJECT_NAME}/
+)        
 
 ament_package()
 
