--- a/config/cartesian_space_example/wbc.yml
+++ b/config/cartesian_space_example/wbc.yml
@@ -1,20 +1,19 @@
-/kuka_iiwa/wbc/wbc:
-  ros__parameters:
-    control_rate: 250.0
-    robot_model_config:
-        type: rbdl
-    task_config:
-        names: ["ee_pose"]
-        ee_pose:
-          type: 1
-          priority: 0
-          root: world
-          tip: link_ee
-          ref_frame: world
-          weights: [1.0,1.0,1.0,1.0,1.0,1.0]
-          activation: 1.0
-    solver_config:
-        type: qpoases
-    scene_config:
-        type: velocity_qp
-    integrate: true
+whole_body_controller:
+    ros__parameters:
+        task_names: ["ee_pose"]
+        robot_model:
+            type: rbdl
+        task_config:
+            ee_pose:
+                type: 1
+                priority: 0
+                root: world
+                tip: link_ee
+                ref_frame: world
+                weights: [1.0,1.0,1.0,1.0,1.0,1.0]
+                activation: 1.0
+        solver_config:
+            type: qpoases
+        scene_config:
+            type: velocity_qp
+        integrate: true
