--- a/config/iiwa_controllers.yaml
+++ b/config/iiwa_controllers.yaml
@@ -1,20 +1,17 @@
 controller_manager:
     ros__parameters:
         update_rate: 1000 # Hz
-
         joint_state_broadcaster:
           type: joint_state_broadcaster/JointStateBroadcaster
-
         whole_body_controller:
           type: wbc_ros/WholeBodyController
+        cartesian_position_controller:
+          type: wbc_ros/CartesianPositionController
 
 whole_body_controller:
     ros__parameters:
-        command_interfaces:
-            - position
-        state_interfaces:
-            - position
-            - velocity
+        control_mode: velocity
+        command_interfaces: ["position"]
         task_names: ["ee_pose"]
         joint_weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0]
         robot_model:
@@ -34,3 +31,14 @@ whole_body_controller:
         scene:
             type: velocity_qp
         integrate: true
+
+cartesian_position_controller:
+    ros__parameters:
+        control_mode: velocity
+        task_name: ee_pose
+        wbc_name: whole_body_controller
+        p_gain: [1.0,1.0,1.0,1.0,1.0,1.0]
+        d_gain: [0.0,0.0,0.0,0.0,0.0,0.0]
+        ff_gain: [0.0,0.0,0.0,0.0,0.0,0.0]
+        max_control_output: [10.0,10.0,10.0,10.0,10.0,10.0]
+        dead_zone: [0.0,0.0,0.0,0.0,0.0,0.0]
